Update and rename flow1.yaml to flow1.yml

--- a/.github/workflows/flow1.yml
+++ b/.github/workflows/flow1.yml
@@ -5,6 +5,6 @@ jobs:
   flow1:
     runs-on: ubuntu-latest
     steps:
-      - name: Check repository owner
+      - name: simple job
         run: |
           echo "test"
